# swagger-config.json
@@ -1,17 +1,6 @@
 {
   "openapi": "3.0.0",
   "paths": {
-    "/": {
-      "get": {
-        "operationId": "AppController_getHello",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/user": {
       "post": {
         "operationId": "UserController_create",
@@ -205,7 +194,7 @@
         ]
       }
     },
-    "/review/movie": {
+    "/review/{id}": {
       "get": {
         "operationId": "ReviewController_getReviewByMovie",
         "parameters": [
@@ -231,9 +220,7 @@
             "bearer": []
           }
         ]
-      }
-    },
-    "/review/{id}": {
+      },
       "patch": {
         "operationId": "ReviewController_updateReview",
         "parameters": [
@@ -707,34 +694,6 @@
             "name": "id",
             "required": true,
             "in": "path",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "tags": [
-          "Movies"
-        ],
-        "security": [
-          {
-            "bearer": []
-          }
-        ]
-      }
-    },
-    "/movies/movie-title": {
-      "get": {
-        "operationId": "MoviesController_findOneMovieTitle",
-        "parameters": [
-          {
-            "name": "title",
-            "required": true,
-            "in": "query",
             "schema": {
               "type": "string"
             }
